--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,7 +42,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Ek+Mukta" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     {% block head %}
     {% endblock %}
 
