--- a/checkin/templates/checkin/list.html
+++ b/checkin/templates/checkin/list.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 {% load table_tags %}
 {% load static %}
-{% block title %}Check In - {% endblock %}
+{% block head_title %}Check In{% endblock %}
 {% block head %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="//code.jquery.com/jquery-2.0.0.min.js"></script>
