--- a/checkin/templates/checkin/qr.html
+++ b/checkin/templates/checkin/qr.html
@@ -4,6 +4,7 @@
     <script type="text/javascript" src="{% static 'webqr/llqrcode.js' %}"></script>
     <script type="text/javascript" src="{% static 'webqr/webqr.js' %}"></script>
 {% endblock %}
+{% block head_title %}QR scanner {% endblock %}
 {% block body %}
     <div class="row margin-top">
         <div class="col-md-10 col-md-offset-1">
