--- a/checkin/templates/checkin/ranking.html
+++ b/checkin/templates/checkin/ranking.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 {% load static %}
 {% load bootstrap3 %}
-{% block title %}Reviewers Ranking - {% endblock %}
+{% block head_title %}Volunteers Ranking{% endblock %}
 {% block head %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 {% endblock %}
