--- a/hackers/templates/cancel.html
+++ b/hackers/templates/cancel.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Cancel application - {% endblock %}
+{% block head_title %}Cancel application{% endblock %}
 
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
