--- a/hackers/templates/dashboard.html
+++ b/hackers/templates/dashboard.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% load bootstrap3 %}
-{% block title %}Dashboard - {% endblock %}
+{% block head_title %}Dashboard{% endblock %}
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/profile.css' %}">
 {% endblock %}
