--- a/organizers/templates/application_detail.html
+++ b/organizers/templates/application_detail.html
@@ -2,8 +2,8 @@
 {% load humanize %}
 {% load bootstrap3 %}
 {% load static %}
-{% block title %}{% if vote %}Vote applications{% else %}{{ app.user.nickname }}'s application{% endif %}
-    - {% endblock %}
+{% block head_title %}{% if vote %}Vote applications{% else %}{{ app.user.nickname }}'s application{% endif %}
+{% endblock %}
 {% block head %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'lib/bars-square.css' %}">
