--- a/checkin/templates/checkin/list.html
+++ b/checkin/templates/checkin/list.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load humanize %}
-{% load table_tags %}
+{% load django_tables2 %}
+{% load bootstrap3 %}
 {% load static %}
 {% block head_title %}Check In{% endblock %}
 {% block head %}
@@ -16,9 +17,14 @@
                         <h4 class="text-center">{% block panel_title %}Confirmed applications{% endblock %}</h4>
                     </div>
                     <div class="panel-body">
-                        <div class="table-responsive">
-                            {% render_table applicationsTable %}
-                        </div>
+                        {% if filter %}
+                            <form action="" method="get" class="form form-inline text-left filter">
+                                {% bootstrap_form filter.form %}
+                                {% bootstrap_button 'Search' %}
+                            </form>
+                            <hr/>
+                        {% endif %}
+                        {% render_table table 'django_tables2/bootstrap.html' %}
                     </div>
                     <div class="panel-footer">
                         {% block extra_buttons %}
