--- a/organizers/templates/applications_list.html
+++ b/organizers/templates/applications_list.html
@@ -19,8 +19,8 @@
                     <div class="panel-body">
                         {% if filter %}
                             <form action="" method="get" class="form form-inline text-left filter">
-                                {% bootstrap_form filter.form %}
-                                {% bootstrap_button 'Search' %}
+                                {% bootstrap_form filter.form size='small' %}
+                                {% bootstrap_button 'Search' size='small' button_class='btn-info' %}
                             </form>
                             <hr/>
                         {% endif %}
