--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -1,6 +1,7 @@
 {% load bootstrap3 %}
 {% load static %}
 {% load form_utils %}
+<h1>Application</h1>
 <small class="pull-right"><span style="color: red">*</span>Indicates required field</small>
 <form class="signup " enctype="multipart/form-data" id="signup_form" method="post" action="">
     {% csrf_token %}
