--- a/applications/templates/dashboard.html
+++ b/applications/templates/dashboard.html
@@ -14,14 +14,16 @@
         </div>
         <div class="col-md-4">
             <div class="panel panel-default border-less">
-             <div class="panel-heading">
-                    <h3 class="panel-title">{% if user.hacker %}{{ user.hacker.name }}'s{% endif %} Hacker Dashboard</h3>
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        {% if user.hacker %}{{ user.hacker.name }}'s{% endif %} Hacker Dashboard</h3>
                 </div>
                 <div class="panel-body no-padding">
                     <div class="list-group">
                         {% for phase in phases %}
                             <a class="list-group-item {% if phase.finished %}finished{% elif phase.key != current.key %}disabled{% endif %} {% if phase.key == active.key %}active{% endif %}"
-                               href="{% if phase.finished or phase.key == current.key %}?phase={{ phase.key }}{% else %}#{% endif %}">
+                               href="{% if phase.finished or phase.key == current.key %}?phase=
+                                   {{ phase.key }}{% else %}#{% endif %}">
                                 {{ phase.title }}
                             </a>
                         {% endfor %}
@@ -32,6 +34,17 @@
                     Errors? Help? Reach us {{ h_contact_email|urlize }}
                 </div>
             </div>
+            {% if reimbursement %}
+                <div class="panel panel-default border-less">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Reimbursement information</h3>
+                    </div>
+                    <div class="panel-body">
+                        {% include 'include/reimbursement.html' %}
+                    </div>
+
+                </div>
+            {% endif %}
         </div>
         <div class="col-md-8">
 
