upload receipt form preview

--- a/applications/templates/dashboard.html
+++ b/applications/templates/dashboard.html
@@ -22,8 +22,7 @@
                     <div class="list-group">
                         {% for phase in phases %}
                             <a class="list-group-item {% if phase.finished %}finished{% elif phase.key != current.key %}disabled{% endif %} {% if phase.key == active.key %}active{% endif %}"
-                               href="{% if phase.finished or phase.key == current.key %}?phase=
-                                   {{ phase.key }}{% else %}#{% endif %}">
+                               href="{% if phase.finished or phase.key == current.key %}?phase={{ phase.key }}{% else %}#{% endif %}">
                                 {{ phase.title }}
                             </a>
                         {% endfor %}
@@ -40,7 +39,7 @@
                         <h3 class="panel-title">Reimbursement information</h3>
                     </div>
                     <div class="panel-body">
-                        {% include 'include/reimbursement.html' %}
+                        {% include 'include/reimbursement_info.html' %}
                     </div>
 
                 </div>
