--- a/applications/templates/phases/application.html
+++ b/applications/templates/phases/application.html
@@ -25,7 +25,7 @@
             <h3>When to leave</h3>
             {{ h_leave }}<br>
         {% endif %}
-        {% include 'include/reimbursement.html' %}
+        {% include 'include/reimbursement_info.html' %}
     </div>
 {% elif application.is_invited or application.is_last_reminder %}
     <p>Congrats! You have been invited to come to {{ h_name }}! Please respond this invite.</p>
@@ -36,7 +36,7 @@
     {% endif %}
     <a href="{% url 'confirm_app' application.uuid_str %}" class="btn btn-block btn-success">Confirm</a>
     <a href="{% url 'cancel_app' application.uuid_str %}" class="btn btn-block btn-danger">Cancel</a>
-    {% include 'include/reimbursement.html' %}
+    {% include 'include/reimbursement_info.html' %}
 {% else %}
     <p> When decisions are released, you'll be able to see your results on this page.<br>
         If you have any questions or concerns, you can still reach us at {{ h_contact_email }}<br>
