--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -70,18 +70,36 @@
                 <ul class="nav navbar-nav navbar-right ">
                     {% if request.user.is_authenticated %}
                         {% if request.user.is_director %}
-                            <li class="{% if request.resolver_match.url_name == "admin:index" %}active{% endif %}"><a href="{% url 'admin:index' %}">Admin</a></li>
+                            <li class="{% if request.resolver_match.url_name == "admin:index" %}active{% endif %}"><a
+                                    href="{% url 'admin:index' %}">Admin</a></li>
                         {% endif %}
                         {% if request.user.is_organizer %}
-                            <li class="{% if request.resolver_match.url_name == "vote" %}active{% endif %}"><a href="{% url 'vote' %}">Vote</a></li>
-                            <li class="{% if request.resolver_match.url_name == "app_list" %}active{% endif %}"><a href="{% url 'app_list' %}">Applications</a></li>
-                            <li class="{% if request.resolver_match.url_name == "ranking" %}active{% endif %}"><a href="{% url 'ranking' %}">Ranking</a></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                   aria-haspopup="true" aria-expanded="false">Applications <span
+                                        class="caret"></span></a>
+                                <ul class="dropdown-menu">
+
+                                    <li class="{% if request.resolver_match.url_name == "app_list" %}active{% endif %}">
+                                        <a href="{% url 'app_list' %}">List</a>
+                                    </li>
+                                    <li class="{% if request.resolver_match.url_name == "vote" %}active{% endif %}">
+                                        <a href="{% url 'vote' %}">Vote</a>
+                                    </li>
+                                    <li class="{% if request.resolver_match.url_name == "ranking" %}active{% endif %}">
+                                        <a href="{% url 'ranking' %}">Vote ranking</a>
+                                    </li>
+                                </ul>
+                            </li>
+
                         {% endif %}
                         {% if request.user.is_organizer or request.user.is_volunteer %}
-                            <li class="{% if request.resolver_match.url_name == "check_in_list" %}active{% endif %}"><a href="{% url 'check_in_list' %}">Check-in</a></li>
+                            <li class="{% if request.resolver_match.url_name == "check_in_list" %}active{% endif %}"><a
+                                    href="{% url 'check_in_list' %}">Check-in</a></li>
                         {% endif %}
                         {% if not request.user.is_organizer %}
-                            <li class="{% if request.resolver_match.url_name == "dashboard" %}active{% endif %}"><a href="{% url 'dashboard' %}">Dashboard</a></li>
+                            <li class="{% if request.resolver_match.url_name == "dashboard" %}active{% endif %}"><a
+                                    href="{% url 'dashboard' %}">Dashboard</a></li>
                         {% endif %}
                         <li><a href="{% url 'account_logout' %}">Logout</a></li>
 
